# shiro_scout

./: .gitattributes  .gitignore  AGENTS.md  BUILD_PLAN.md  CHANGELOG.md  DECISIONS.md  Diagnose-SandboxMount.ps1  FEATURES.md  FILEOPS.md  GLOSSARY.md  KICKOFF_PROMPT.md  LOOP_PROMPT.md  MEMORY.md  README.md  SESSION_PROTOCOL.md  cargo_check_log.txt  cargo_check_out.txt  clippy_output.txt  deny.toml  gitleaks.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  shiroscout-capabilities.md  shiroscout-persona.md  shiroscout-self-healing.md  test.txt
.a0proj/: project.json
.a0proj/instructions/: shiro-scout-reference-docs.md
.github/workflows/: build-ci.yml  release.yml  secret-scan.yml
backups/docker-fix-20260712-202748/: App.tsx  Dockerfile.sandbox  bridge_client.rs  container.rs  entrypoint.sh  lib.rs  settings.rs  tauri-commands.ts
docs/: BUILD_PLAN.md  DECISIONS.md  FEATURES.md  FILE-PATH-CONTROLS.md  FILEOPS.md  GLOSSARY.md  KICKOFF_PROMPT.md  MEMORY.md  MOCKUP-ADHERENCE-CRITERIA.md  RUST-CRATES-LIST.md  RUST-CRATES-REFERENCE.md  SANDBOX_SETUP_GUIDE.md  SESSION_PROTOCOL.md  TEAM-FEEDBACK-2026-07-08.md  THREAT_MODEL.md  TRUE-STATE-PRESERVATION.md  UI-UX-FEASIBILITY.md  USER-PERSONAS.md  docker-fail-explanation.md  workspace-mount-postmortem.md
docs/Arch_Design/: AEGIS-DESIGN-GUIDE.md
docs/persona/agent-zero-core-extract/agent-zero-core-extract/rust-skeleton/: Cargo.toml
docs/persona/agent-zero-core-extract/agent-zero-core-extract/rust-skeleton/src/: agent.rs  core.rs  lib.rs  prompts.rs
scripts/: auto-backup.ps1  build-release.ps1
src/: App.module.css  App.tsx  main.tsx  tauri-commands.ts
src-tauri/: Cargo.toml  deny.toml  fix_clippy.py  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docker/: Dockerfile.sandbox  build-detached.log.err  entrypoint.sh
src-tauri/docker/bridge/: Cargo.toml
src-tauri/docker/bridge-build/src/: main.rs
src-tauri/docker/bridge/src/: main.rs
src-tauri/src/: container.rs  docker_client.rs  error.rs  hitl.rs  lib.rs  main.rs  settings.rs
src-tauri/src/agent/: agent.rs  context.rs  history.rs  loop_data.rs  mod.rs  persistence.rs  state.rs
src-tauri/src/env/: mod.rs
src-tauri/src/llm/: credential_manager.rs  health_check.rs  keychain.rs  mod.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/prompts/: mod.rs  shiroscout-persona.md
src-tauri/src/pty/: mod.rs
src-tauri/src/sandbox/: mod.rs
src-tauri/src/tools/: mod.rs
(+102 files in other folders)
