[package]
name = "shiro-scout"
version = "0.1.0"
description = "AI Coding Agent Manager"
authors = ["ShiroScout Team"]
edition = "2021"
license = "MIT"

[lib]
name = "shiro_scout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
camino = "1"
async-trait = "0.1"
windows = { version = "0.61", features = [
    "Win32_Security_Credentials",
    "Win32_Foundation",
] }

rig = "0.39.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
