[package]
name = "monologue-core"
version = "0.1.0"
edition = "2021"
description = "Agent Zero-style monologue loop skeleton for a Tauri 2 + React app. NOT compile-verified — a structural port of agent0ai/agent-zero's agent.py loop."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
include_dir = "0.7"          # embed the prompts/ folder into the binary
reqwest = { version = "0.12", features = ["json", "stream"] } # LLM HTTP client (DeepSeek/OpenAI-compatible)
futures-util = "0.3"

# Enable when wiring into your Tauri 2 app:
# tauri = { version = "2", features = [] }

[features]
default = []
tauri-app = []               # gate the #[tauri::command] wiring in lib.rs
